test/compile_errors/stage1/obj/undeclared_identifier.zig
export fn a() void {
    return
    b +
    c;
}

// undeclared identifier
//
// tmp.zig:3:5: error: use of undeclared identifier 'b'
